[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/MusicManager/Images/SoundPlayer.png" type="Texture" id=1]
[ext_resource path="res://addons/MusicManager/Scripts/Item.gd" type="Script" id=2]

[node name="Item" type="Button"]
self_modulate = Color( 1, 0.952941, 0.741176, 1 )
margin_right = 214.0
margin_bottom = 45.0
button_mask = 3
text = "Sound file name"
icon = ExtResource( 1 )
clip_text = true
align = 0
script = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="." to="." method="_on_Item_button_down"]
[connection signal="button_up" from="." to="." method="_on_Item_button_up"]
[connection signal="pressed" from="." to="." method="_on_Item_pressed"]
